Empezando con Graficos,Encuestas

--- a/src/app/Componentes/contactanos/contactanos.component.html
+++ b/src/app/Componentes/contactanos/contactanos.component.html
@@ -1,1 +1,217 @@
-<p>contactanos works!</p>
+<button class="btn btn-outline-light my-2 my-sm-0"  (click)="openDialog()" type="submit"  *ngIf="userProfile?.perfil == undefined ">Iniciar Sesíon</button>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-3">
+            
+			<div class="jumbotron">
+				<h2>
+					Contactanos!
+				</h2>
+				<p>
+                    Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+				</p>
+				<p>
+					<a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                </p>
+                <p>
+                        <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                    </p>
+                    <p>
+                            <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                        </p>
+			</div>
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					 <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+				</li>
+				<li class="nav-item">
+					 <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+				</li>
+			</ul>
+        </div>
+        
+        <div class="col-md-3">
+            
+                <div class="jumbotron">
+                    <h2>
+                        Contactanos!
+                    </h2>
+                    <p>
+                        Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+                    </p>
+                    <p>
+                        <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                    </p>
+                    <p>
+                            <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                        </p>
+                        <p>
+                                <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                            </p>
+                </div>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                         <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+            
+                    <div class="jumbotron">
+                        <h2>
+                            Contactanos!
+                        </h2>
+                        <p>
+                            Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+                        </p>
+                        <p>
+                            <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                        </p>
+                        <p>
+                                <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                            </p>
+                            <p>
+                                    <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                                </p>
+                    </div>
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                             <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+                        </li>
+                        <li class="nav-item">
+                             <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+            
+                        <div class="jumbotron">
+                                <div class="chart-wrapper">
+                                        <canvas baseChart 
+                                        [datasets]="barChartData"
+                                        [labels]="barChartLabels"
+                                        [options]="barChartOptions"
+                                        [plugins]="barChartPlugins"
+                                        [legend]="barChartLegend"
+                                        [chartType]="barChartType">
+                                      </canvas>
+                                    </div>
+                    </div>
+    </div>
+    
+
+    //segundo row
+    
+</div>
+
+<div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                
+                <div class="jumbotron">
+                    <h2>
+                        Contactanos!
+                    </h2>
+                    <p>
+                        Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+                    </p>
+                    <p>
+                        <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                    </p>
+                    <p>
+                            <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                        </p>
+                        <p>
+                                <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                            </p>
+                </div>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                         <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="col-md-3">
+                
+                    <div class="jumbotron">
+                        <h2>
+                            Contactanos!
+                        </h2>
+                        <p>
+                            Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+                        </p>
+                        <p>
+                            <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                        </p>
+                        <p>
+                                <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                            </p>
+                            <p>
+                                    <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                                </p>
+                    </div>
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                             <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+                        </li>
+                        <li class="nav-item">
+                             <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                
+                        <div class="jumbotron">
+                            <h2>
+                                Contactanos!
+                            </h2>
+                            <p>
+                                Para obtener mas información acerca de nuestros servicios, llamanos al siguiente numero 0800-222-DENTAL (72583).
+                            </p>
+                            <p>
+                                <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                            </p>
+                            <p>
+                                    <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                                </p>
+                                <p>
+                                        <a class="btn btn-primary btn-large"  (click)="VotarEspecialista('a')" >Votar Especialidad</a>
+                                    </p>
+                        </div>
+                        <ul class="nav nav-pills">
+                            <li class="nav-item">
+                                 <a class="nav-link btn btn-primary" href="#">Home <span class="badge badge-light">42</span></a>
+                            </li>
+                            <li class="nav-item">
+                                 <a class="nav-link" href="#">More <span class="badge badge-secondary">16</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                
+                            <div class="jumbotron">
+                                    <div class="chart-wrapper">
+                                            <canvas baseChart 
+                                            [datasets]="barChartData"
+                                            [labels]="barChartLabels"
+                                            [options]="barChartOptions"
+                                            [plugins]="barChartPlugins"
+                                            [legend]="barChartLegend"
+                                            [chartType]="barChartType">
+                                          </canvas>
+                                        </div>
+                        </div>
+        </div>
+        
+    
+        //segundo row
+        
+    </div>
