--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -32,8 +32,9 @@
           <div class="row">
           
               <div class="col col-md-12 text-col">
-                  <input type="text" placeholder="Agregue Historia Clinica"   name="historiaClinica" [(ngModel)]="historiaClinica" >
-                  <button class="btn btn-outline-secondary action" style="font-size:bold; background-color: RED; color: black  "(click)="guardarHistoriaClinica()" type="button">
+                  <input   maxlength="30" type="text" style="height: 90px;  width:100%" placeholder="Agregue Historia Clinica"   name="historiaClinica" [(ngModel)]="historiaClinica" >
+                  
+                  <button class="btn btn-outline-secondary action" style=" font-size:bold; background-color: RED; color: black  "(click)="guardarHistoriaClinica(item.cliente)" type="button">
                       <ion-icon name="close-circle"></ion-icon>Guardar Reseña
                     </button>
                 </div>
