--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,7 +127,7 @@
 				  </div>
 				  				  <!-- /.col-md-4  -->
 
-						<div class="col-md-4">
+						<!-- <div class="col-md-4">
 						  <span class="text-uppercase text-white" style="font-weight: bold; ">CONSULTORIOS</span>
 						  <ul class="nav flex-column">
 								<li class="nav-item">
@@ -138,7 +138,7 @@
 										<a class="nav-link" routerLink="/ListadoConsultorio">Nuestros Consultorios</a>
 									  </li>
 								
-						</div>
+						</div> -->
 				  <!-- /.col-md-4  -->
 				  <div class="col-md-4">
 					<span class="text-uppercase text-white" style="font-weight: bold; ">TURNOS</span>
