--- a/src/app/Componentes/carrousel/carrousel.component.html
+++ b/src/app/Componentes/carrousel/carrousel.component.html
@@ -31,7 +31,7 @@
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
-                <img style="width: 100%; height: 475.646px;" src="https://previews.123rf.com/images/antonioguillem/antonioguillem1702/antonioguillem170200326/73036449-dentista-y-el-paciente-la-elecci%C3%B3n-de-tratamiento-en-una-consulta-con-los-equipos-m%C3%A9dicos-en-el-fondo.jpg" alt="Channai Metro">  
+                <img style="width: 100%; height: 475.646px;" src="https://portal.lamar.edu.mx/oficial/images/licenciaturas/1920x677_17.jpg" alt="Bangalore Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
                 background: rgb(0, 106, 133); /* Fallback color */
@@ -39,8 +39,8 @@
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Implantes Dentales: Información General</h1>
-                        <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
+                   <h1>Implantes Dentales: Información General</h1>
+                   <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
